--- a/WebApp/templates/base.html
+++ b/WebApp/templates/base.html
@@ -15,7 +15,7 @@
       <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
           <div class="container">
-            <a class="navbar-brand mr-4" href="/">Book recommender system</a>
+            <a class="navbar-brand mr-4" href="{{ url_for('index') }}">Book recommender system</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -27,8 +27,12 @@
                 <a class="nav-item nav-link" href="/about">Recommend books</a>
               </div>
               <div class="navbar-nav">
-                <a class="nav-item nav-link" href="/login">Login</a>
-                <a class="nav-item nav-link" href="/register">Register</a>
+                {% if current_user.is_authenticated %}
+                  <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+                {% else %}
+                  <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                  <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+                {% endif %}
               </div>
             </div>
           </div>
