First draft of viewing rated books

--- a/WebApp/templates/base.html
+++ b/WebApp/templates/base.html
@@ -22,9 +22,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
               <div class="navbar-nav mr-auto">
-                <a class="nav-item nav-link" href="/">Rated books</a>
+                <a class="nav-item nav-link" href="{{ url_for('rated_books') }}">Rated books</a>
                 <a class="nav-item nav-link" href="/recommend">Recommend books</a>
-                <a class="nav-item nav-link" href="/about">Recommend books</a>
+                <a class="nav-item nav-link" href="/about">Find books</a>
               </div>
               <div class="navbar-nav">
                 {% if current_user.is_authenticated %}
