--- a/WebApp/templates/base.html
+++ b/WebApp/templates/base.html
@@ -24,7 +24,7 @@
               <div class="navbar-nav mr-auto">
                 <a class="nav-item nav-link" href="{{ url_for('rated_books') }}">Rated books</a>
                 <a class="nav-item nav-link" href="/recommend">Recommend books</a>
-                <a class="nav-item nav-link" href="/about">Find books</a>
+                <a class="nav-item nav-link" href="/find">Find books</a>
               </div>
               <div class="navbar-nav">
                 {% if current_user.is_authenticated %}
