--- a/WebApp/templates/ratedBooks.html
+++ b/WebApp/templates/ratedBooks.html
@@ -4,5 +4,25 @@
     <h1>
         Books you have rated
     </h1>
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th scope="col">Title</th>
+                <th scope="col">Author</th>
+                <th scope="col">Pages</th>
+                <th scope="col">Topic</th>
+                <th scope="col">Your rating</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for index, book in books.iterrows() %}
+                <td>{{ book["title"] }}</td>
+                <td>{{ book["author"] }}</td>
+                <td>{{ book["pages"] }}</td>
+                <td>{{ book["topicName"] }}</td>
+                <td>{{ book["rating"] }}</td>
+            {% endfor %}
+        </tbody>
+    </table>
     {{ tables|safe }}
 {% endblock %}
