Delete unnecessary entity files; finish star rating

--- a/WebApp/static/main.css
+++ b/WebApp/static/main.css
@@ -1,6 +1,11 @@
 /* Copied from the tutorial provided on
  https://github.com/CoreyMSchafer/code_snippets/blob/master/Python/Flask_Blog/03-Forms-and-Validation/static/main.css*/
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background: #fafafa;
   color: #333333;
@@ -82,46 +87,40 @@ a.article-title:hover {
   font-size: 2.5rem;
 }
 
-/* Copied from https://codepen.io/sidbelbase/pen/RwGZRbL */
+/* Copied from https://codepen.io/hesguru/pen/BaybqXv */
 
-.rate-area {
-	float: left;
-	border-style: none;
+.rate {
+    float: left;
+    height: 46px;
+    padding: 0 10px;
 }
-
-.rate-area:not(:checked) > input {
-	position: absolute;
-	top: -9999px;
-	clip: rect(0, 0, 0, 0);
+.rate:not(:checked) > input {
+    position:absolute;
+    top:-9999px;
 }
-
-.rate-area:not(:checked) > label {
-	float: right;
-	width: 0.8em;
-	overflow: hidden;
-	white-space: nowrap;
-	cursor: pointer;
-	font-size: 180%;
-	color: lightgrey;
+.rate:not(:checked) > label {
+    float:right;
+    width:1em;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:30px;
+    color:#ccc;
 }
-
-.rate-area:not(:checked) > label:before {
-	content: "★";
+.rate:not(:checked) > label:before {
+    content: '★ ';
 }
-
-.rate-area > input:checked ~ label {
-	color: gold;
+.rate > input:checked ~ label {
+    color: #ffc700;
 }
-
-.rate-area:not(:checked) > label:hover,
-.rate-area:not(:checked) > label:hover ~ label {
-	color: gold;
+.rate:not(:checked) > label:hover,
+.rate:not(:checked) > label:hover ~ label {
+    color: #deb217;
 }
-
-.rate-area > input:checked + label:hover,
-.rate-area > input:checked + label:hover ~ label,
-.rate-area > input:checked ~ label:hover,
-.rate-area > input:checked ~ label:hover ~ label,
-.rate-area > label:hover ~ input:checked ~ label {
-	color: gold;
+.rate > input:checked + label:hover,
+.rate > input:checked + label:hover ~ label,
+.rate > input:checked ~ label:hover,
+.rate > input:checked ~ label:hover ~ label,
+.rate > label:hover ~ input:checked ~ label {
+    color: #c59b08;
 }
