--- a/WebApp/templates/ratedBooks.html
+++ b/WebApp/templates/ratedBooks.html
@@ -27,5 +27,7 @@
                 {% endfor %}
             </tbody>
         </table>
+        {{ pagination.info }}
+        {{ pagination.links }}
     {% endif %}
 {% endblock %}
