--- a/WebApp/templates/base.html
+++ b/WebApp/templates/base.html
@@ -15,23 +15,23 @@
       <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
           <div class="container">
-            <a class="navbar-brand mr-4" href="{{ url_for('index') }}">Book recommender system</a>
+            <a class="navbar-brand mr-4" href="{{ url_for('main.index') }}">Book recommender system</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
               <div class="navbar-nav mr-auto">
-                <a class="nav-item nav-link" href="{{ url_for('rated_books') }}">Rated books</a>
+                <a class="nav-item nav-link" href="{{ url_for('books.rated_books') }}">Rated books</a>
                 <a class="nav-item nav-link" href="/recommend">Recommend books</a>
                 <a class="nav-item nav-link" href="/find">Find books</a>
               </div>
               <div class="navbar-nav">
                 {% if current_user.is_authenticated %}
-                  <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+                  <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Logout</a>
                 {% else %}
-                  <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                  <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+                  <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Login</a>
+                  <a class="nav-item nav-link" href="{{ url_for('users.register') }}">Register</a>
                 {% endif %}
               </div>
             </div>
