--- a/WebApp/templates/ratedBooks.html
+++ b/WebApp/templates/ratedBooks.html
@@ -18,7 +18,7 @@
             <tbody>
                 {% for book in books %}
                     <tr>
-                        <td><a href="{{ url_for('book_detail', book_id=book['id']) }}">{{ book["title"] }}</a></td>
+                        <td><a href="{{ url_for('books.book_detail', book_id=book['id']) }}">{{ book["title"] }}</a></td>
                         <td>{{ book["author"] }}</td>
                         <td>{{ book["pages"] }}</td>
                         <td>{{ book["topicName"] }}</td>
