Add stopwords; Dependency inversion in the service layer; fix label in book detail

--- a/web_app/templates/bookDetail.html
+++ b/web_app/templates/bookDetail.html
@@ -49,7 +49,7 @@
 				{% endif %}
 
 				{% if book['tableOfContents']|length > 0 %}
-					<label class="form-label">Book description</label>
+					<label class="form-label">Table of contents</label>
 					<div class="form-group">
 						<textarea class="form-control" rows="5" cols="90" readonly>{{ book['tableOfContents'] }}</textarea>
 					</div>
