--- a/web_app/templates/recommendations.html
+++ b/web_app/templates/recommendations.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
-{% block title %} Your rated books {% endblock %}
+{% block title %} Recommended books {% endblock %}
 {% block content %}
     <h1>
-        Books you have rated
+        Books that are recommended for you
     </h1>
     {% if books and books|length > 0 %}
         <table class="table table-hover">
