--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -3,6 +3,6 @@
 {% block content %}
     <h2>About the application</h2>
     <p>This application is the implementation of the recommender system designed in the diploma
-    thesis</br> "A Hybrid Book Recommender System Utilizing Diverse-Item Selection Algorithm"
+        thesis</br> "<i>A Hybrid Book Recommender System Utilizing Diverse-Item Selection Algorithm</i>"
     by Martin Balucha in the spring semester of 2021.</p>
 {% endblock %}
