--- a/web_app/templates/base.html
+++ b/web_app/templates/base.html
@@ -22,8 +22,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
               <div class="navbar-nav mr-auto">
-                <a class="nav-item nav-link" href="{{ url_for('books.rated_books') }}">Rated books</a>
-                <a class="nav-item nav-link" href="{{ url_for('books.recommend') }}">Recommend books</a>
+                {% if current_user.is_authenticated %}
+                  <a class="nav-item nav-link" href="{{ url_for('books.rated_books') }}">Rated books</a>
+                  <a class="nav-item nav-link" href="{{ url_for('books.recommend') }}">Recommend books</a>
+                {% endif %}
                 <a class="nav-item nav-link" href="{{ url_for('books.find_books') }}">Find books</a>
                   <a class="nav-item nav-link" href="{{ url_for('main.about') }}">About</a>
               </div>
